--- a/.build/TestTargetFramework.props
+++ b/.build/TestTargetFramework.props
@@ -4,6 +4,7 @@
     <!-- Changing this setting will allow testing on all target frameworks within Visual Studio 2017.
     Note that the main libraries are multi-targeted, so this has no effect on how they are compiled,
     this setting only affects the test projects. -->
+    <!--<TargetFramework>net471</TargetFramework>-->
     <!--<TargetFramework>net48</TargetFramework>-->
     <!--<TargetFramework>net8.0</TargetFramework>-->
     <!--<TargetFramework>net9.0</TargetFramework>-->
