Added net8.0 and net9.0 target + tests (#5)
* SWEEP: Upgraded to .NET 9 SDK. Added net8.0 and net9.0 tests and target. Bumped from net451 to net462. Added net471 target to test netstandard2.0.

* dependencies.props: Bumped Microsoft.NETFramework.ReferenceAssemblies to 1.0.3

* dependencies.props: Bumped Microsoft.NET.Test.Sdk to 17.11.1

* dependencies.props: Bumped NUnit3TestAdapter to 4.6.0

* dependencies.props: Bumped NUnit to 3.14.0

* SWEEP: Changed $(SolutionDir) to $(RepositoryRoot)

* Added EncodingProviderInitializer to ensure that the encoding provider is initialized before any classes that use an encoding (Dictionary, DictionaryLookup, and DictionaryMetadata).

* Morfologik.Stemming.Dictionary: Fixed obsolete warning for WebRequest by changing to use HttpClient. Added Uri tests to ensure it functions.

* SWEEP: Fixed loading issues with encoding providers

* Morfologik.Stemming.UnmappableInputException: marked serialization constructor obsolete.

* SWEEP: Fixed nullable warnings

* Directory.Build.targets: Added AlternatePublishRootDirectory property to change publish location while still nesting the projects in separate folders.

* Morfologik.TestFramework.TypeExtensions::getResourceAsStream(): Added exception when the embedded resource stream cannot be found using a given name and type

* docs/building-and-testing.md: Updated Powershell min version to 6.0

* TestTargetFramework.props: Added commented target for net471

* run-tests-on-os.yml: Fixed indentation issue

* building-and-testing.md: Updated info about .NET 9 SDK and Visual Studio 2022

* Morfologik.Stemming.DictionaryMetadata: Changed attributes field to be made read-only in the constructor rather than instantiating a new instance each time the Attributes property is called.

* Morfologik.Stemming.DictionaryMetadata::GetExpectedMetadataLocation(): Added null guard clause and a sensible exception message if the directory path does not resolve.

--- a/.build/TestTargetFramework.props
+++ b/.build/TestTargetFramework.props
@@ -4,17 +4,34 @@
     <!-- Changing this setting will allow testing on all target frameworks within Visual Studio 2017.
     Note that the main libraries are multi-targeted, so this has no effect on how they are compiled,
     this setting only affects the test projects. -->
-    <!--<TargetFramework>net461</TargetFramework>-->
-    <!--<TargetFramework>netcoreapp3.1</TargetFramework>-->
-    <!--<TargetFramework>net5.0</TargetFramework>-->
-    <!--<TargetFramework>net6.0</TargetFramework>-->
+    <!--<TargetFramework>net471</TargetFramework>-->
+    <!--<TargetFramework>net48</TargetFramework>-->
+    <!--<TargetFramework>net8.0</TargetFramework>-->
+    <!--<TargetFramework>net9.0</TargetFramework>-->
     <TestAllTargetFrameworks>true</TestAllTargetFrameworks>
 
     <!-- Allow the build script to pass in the test frameworks to build for.
       This overrides the above TargetFramework setting. 
       TODO: Due to a parsing bug, we cannot pass a string with a ; to dotnet msbuild, so passing true as a workaround -->
-    <TargetFrameworks Condition=" '$(TestAllTargetFrameworks)' == 'true' ">net6.0;net5.0;netcoreapp3.1;net461</TargetFrameworks>
+
+    <!-- Test Client to DLL target works as follows:
+
+      Test Client       | Target Under Test
+      net9.0            | net9.0
+      net8.0            | net8.0
+      net48             | net462
+      net471            | netstandard2.0
+      
+    -->
+    
+    <TargetFrameworks Condition=" '$(TestAllTargetFrameworks)' == 'true' ">net9.0;net8.0</TargetFrameworks>
+    <TargetFrameworks Condition=" '$(TestAllTargetFrameworks)' == 'true' AND $([MSBuild]::IsOsPlatform('Windows')) ">$(TargetFrameworks);net48;net471</TargetFrameworks>
     <TargetFramework Condition=" '$(TargetFrameworks)' != '' "></TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Label="Mismatched Target Framework (to override the target framework under test)">
+    <SetTargetFramework></SetTargetFramework>
+    <SetTargetFramework Condition=" '$(TargetFramework)' == 'net471' ">TargetFramework=netstandard2.0</SetTargetFramework>
   </PropertyGroup>
   
 </Project>
