--- a/tests/Morfologik.Stemming.Tests/Morfologik.Stemming.Tests.csproj
+++ b/tests/Morfologik.Stemming.Tests/Morfologik.Stemming.Tests.csproj
@@ -9,8 +9,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Morfologik.Stemming\Morfologik.Stemming.csproj" />
-    <ProjectReference Include="..\..\src\Morfologik.TestFramework\Morfologik.TestFramework.csproj" />
+    <ProjectReference Include="..\..\src\Morfologik.Stemming\Morfologik.Stemming.csproj">
+      <SetTargetFramework>$(SetTargetFramework)</SetTargetFramework>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\Morfologik.TestFramework\Morfologik.TestFramework.csproj">
+      <SetTargetFramework>$(SetTargetFramework)</SetTargetFramework>
+    </ProjectReference>
+  </ItemGroup>
+
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) ">
+    <Reference Include="System.Net.Http"/>
   </ItemGroup>
 
   <ItemGroup>
