--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
 
   - job: Build
     pool:
-      vmImage: 'windows-2019'
+      vmImage: 'windows-latest'
 
     steps:
     - pwsh: |
@@ -273,7 +273,7 @@ stages:
   - job: Publish
     condition: and(succeeded(), ne(variables['ArtifactFeedID'], ''))
     pool:
-      vmImage: 'windows-2019'
+      vmImage: 'windows-latest'
 
     steps:
     - template: '.build/azure-templates/show-all-environment-variables.yml'
