--- a/.build/dependencies.props
+++ b/.build/dependencies.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup Label="NuGet Package Reference Versions">
-    <J2NPackageReferenceVersion>2.0.0</J2NPackageReferenceVersion>
+    <J2NPackageReferenceVersion>2.2.0-alpha-0021</J2NPackageReferenceVersion>
     <MicrosoftNETFrameworkReferenceAssembliesPackageReferenceVersion>1.0.3</MicrosoftNETFrameworkReferenceAssembliesPackageReferenceVersion>
     <MicrosoftNETTestSdkPackageReferenceVersion>17.11.1</MicrosoftNETTestSdkPackageReferenceVersion>
     <MicrosoftSourceLinkAzureReposGitPackageReferenceVersion>1.1.1</MicrosoftSourceLinkAzureReposGitPackageReferenceVersion>
